<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_bottom_curve_blue">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/size_15sp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/size_40sp"
            android:src="@drawable/app_logo_icon" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_5sp"
            android:layout_marginTop="@dimen/size_30sp"
            android:layout_marginRight="@dimen/size_5sp"
            android:layout_marginBottom="@dimen/size_5sp"
            android:elevation="0dp"
            android:padding="@dimen/size_10sp"
            app:cardCornerRadius="@dimen/size_8sp"
            android:background="@color/white">

            <EditText
                android:id="@+id/email_or_phone_et"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_50sp"
                android:hint="@string/enter_your_email_text"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:paddingLeft="@dimen/size_15sp"
                android:textColor="@color/black"
                android:backgroundTint="@android:color/transparent"
                android:textColorHint="@color/grey_text"
                android:textSize="@dimen/small_medium_text_size" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_5sp"
            android:layout_marginTop="@dimen/size_10sp"
            android:layout_marginRight="@dimen/size_5sp"
            android:layout_marginBottom="@dimen/size_5sp"
            android:elevation="0dp"
            android:padding="@dimen/size_10sp"
            android:background="@color/white"
            app:cardCornerRadius="@dimen/size_8sp">

            <EditText
                android:id="@+id/password_et"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_50sp"
                android:background="@android:color/transparent"
                android:hint="@string/password_text"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:paddingLeft="@dimen/size_15sp"
                android:textColor="@color/black"
                android:textColorHint="@color/grey_text"
                android:textSize="@dimen/small_medium_text_size" />

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/forget_password_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/size_5sp"
            android:text="@string/forget_password_text"
            android:textColor="@color/navi_blue"
            android:textSize="@dimen/small_text_size" />

        <TextView
            android:id="@+id/login_btn_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_20sp"
            android:background="@drawable/custom_navi_blue_radius_eight_btn_bg"
            android:gravity="center"
            android:paddingTop="@dimen/size_10sp"
            android:paddingBottom="@dimen/size_10sp"
            android:text="@string/login_text"
            android:textColor="@color/white"
            android:textSize="@dimen/medium_text_size" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/size_8sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/do_not_have_acc_text"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/sign_up_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_8sp"
            android:text="@string/sign_up_text"
            android:textColor="@color/white"
            android:textSize="@dimen/small_medium_text_size"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>