<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_bottom_curve_blue">

    <include
        android:id="@+id/toolbar_fragment"
        layout="@layout/fragment_toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar_fragment"
        android:padding="@dimen/size_15sp"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_5sp"
            android:layout_marginTop="@dimen/size_10sp"
            android:layout_marginRight="@dimen/size_5sp"
            android:layout_marginBottom="@dimen/size_5sp"
            android:elevation="0dp"
            android:background="@color/white"
            android:padding="@dimen/size_10sp"
            app:cardCornerRadius="@dimen/size_8sp">

            <EditText
                android:id="@+id/name_et"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_50sp"
                android:background="@android:color/transparent"
                android:hint="@string/name_text"
                android:imeOptions="actionNext"
                android:textColor="@color/black"
                android:paddingLeft="@dimen/size_15sp"
                android:maxLines="1"
                android:inputType="text"
                android:textColorHint="@color/grey_text"
                android:textSize="@dimen/small_medium_text_size" />


        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_5sp"
            android:layout_marginTop="@dimen/size_10sp"
            android:layout_marginRight="@dimen/size_5sp"
            android:layout_marginBottom="@dimen/size_5sp"
            android:elevation="0dp"
            android:background="@color/white"
            android:padding="@dimen/size_10sp"
            app:cardCornerRadius="@dimen/size_8sp">

            <EditText
                android:id="@+id/email_et"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_50sp"
                android:background="@android:color/transparent"
                android:hint="@string/email_text"
                android:imeOptions="actionNext"
                android:paddingLeft="@dimen/size_15sp"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textColorHint="@color/grey_text"
                android:maxLines="1"
                android:textSize="@dimen/small_medium_text_size" />


        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_5sp"
            android:layout_marginTop="@dimen/size_10sp"
            android:layout_marginRight="@dimen/size_5sp"
            android:layout_marginBottom="@dimen/size_5sp"
            android:elevation="0dp"
            android:background="@color/white"
            android:padding="@dimen/size_10sp"
            app:cardCornerRadius="@dimen/size_8sp">

            <EditText
                android:id="@+id/phone_et"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_50sp"
                android:background="@android:color/transparent"
                android:hint="@string/mobile_no_text"
                android:imeOptions="actionNext"
                android:paddingLeft="@dimen/size_15sp"
                android:inputType="number"
                android:textColor="@color/black"
                android:textColorHint="@color/grey_text"
                android:maxLength="10"
                android:maxLines="1"
                android:textSize="@dimen/small_medium_text_size" />


        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_5sp"
            android:layout_marginTop="@dimen/size_10sp"
            android:layout_marginRight="@dimen/size_5sp"
            android:layout_marginBottom="@dimen/size_5sp"
            android:elevation="0dp"
            android:background="@color/white"
            android:padding="@dimen/size_10sp"
            app:cardCornerRadius="@dimen/size_8sp">

            <EditText
                android:id="@+id/password_et"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_50sp"
                android:background="@android:color/transparent"
                android:hint="@string/password_text"
                android:imeOptions="actionNext"
                android:paddingLeft="@dimen/size_15sp"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/grey_text"
                android:maxLines="1"
                android:textSize="@dimen/small_medium_text_size" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_5sp"
            android:layout_marginTop="@dimen/size_10sp"
            android:layout_marginRight="@dimen/size_5sp"
            android:layout_marginBottom="@dimen/size_5sp"
            android:elevation="0dp"
            android:background="@color/white"
            android:padding="@dimen/size_10sp"
            app:cardCornerRadius="@dimen/size_8sp">

            <EditText
                android:id="@+id/confirm_password_et"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_50sp"
                android:background="@android:color/transparent"
                android:hint="@string/confirm_pass_text"
                android:imeOptions="actionDone"
                android:paddingLeft="@dimen/size_15sp"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/grey_text"
                android:maxLines="1"
                android:textSize="@dimen/small_medium_text_size" />

        </com.google.android.material.card.MaterialCardView>

        <CheckBox
            android:id="@+id/accept_cb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_10sp"
            android:text="@string/term_and_condition_text"
            android:textColor="@color/grey_text"
            android:buttonTint="@color/navi_blue"
            android:button="@drawable/check_box"
            android:layout_marginLeft="@dimen/size_10sp"
            android:padding="@dimen/size_10sp"/>

        <TextView
            android:id="@+id/create_acc_btn_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_navi_blue_radius_eight_btn_bg"
            android:layout_marginTop="@dimen/size_20sp"
            android:text="@string/create_acc_text"
            android:textColor="@color/white"
            android:textSize="@dimen/medium_text_size"
            android:paddingTop="@dimen/size_10sp"
            android:paddingBottom="@dimen/size_10sp"
            android:gravity="center" />

        <TextView
            android:id="@+id/update_acc_btn_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_navi_blue_radius_eight_btn_bg"
            android:layout_marginTop="@dimen/size_20sp"
            android:text="@string/update_acc_text"
            android:textColor="@color/white"
            android:textSize="@dimen/medium_text_size"
            android:paddingTop="@dimen/size_10sp"
            android:paddingBottom="@dimen/size_10sp"
            android:gravity="center"
            android:visibility="gone"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_indi_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="@dimen/size_8sp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_acc_text"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/login_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_text"
            android:textSize="@dimen/small_medium_text_size"
            android:textStyle="bold"
            android:layout_marginLeft="@dimen/size_8sp"
            android:textColor="@color/white"/>

    </LinearLayout>

</RelativeLayout>