<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_3sp"
        android:layout_marginBottom="@dimen/size_3sp"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/size_8sp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blogs_title_text"
                android:textColor="@color/custom_black"
                android:textSize="@dimen/small_medium_text_size" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.2sp"
                android:layout_marginTop="@dimen/size_5sp"
                android:background="@color/grey_text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_10sp"
                android:maxLength="300"
                android:text="@string/dummy_text"
                android:textColor="@color/grey_text"
                android:textSize="@dimen/small_text_size" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.2sp"
                android:layout_marginTop="@dimen/size_10sp"
                android:background="@color/grey_text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_10sp"
                android:text="@string/blog_time_text"
                android:textColor="@color/grey_text"
                android:textSize="@dimen/small_text_size" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>