<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_1sp"
        app:cardCornerRadius="@dimen/size_8sp"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/size_10sp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/are_you_sure_text"
                android:textColor="@color/custom_black"
                android:textSize="@dimen/medium_text_size" />

            <TextView
                android:id="@+id/confirmation_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_20sp"
                android:text="@string/do_you_really_text"
                android:textColor="@color/custom_black"
                android:textSize="@dimen/small_medium_text_size" />

            <LinearLayout
                android:id="@+id/con_and_submit_btn_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_20sp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/continue_test_btn_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/size_5sp"
                    android:layout_weight="1"
                    android:background="@drawable/custom_navi_blue_radius_eight_btn_bg"
                    android:gravity="center"
                    android:paddingTop="@dimen/size_10sp"
                    android:paddingBottom="@dimen/size_10sp"
                    android:text="@string/continue_test_text"
                    android:textColor="@color/white"
                    android:textSize="@dimen/small_medium_text_size" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/submit_cv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/size_5sp"
                    android:layout_marginTop="0.2dp"
                    android:layout_marginRight="0.2dp"
                    android:layout_marginBottom="0.2dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="@dimen/size_8sp"
                    android:background="@color/white">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingTop="@dimen/size_10sp"
                        android:paddingBottom="@dimen/size_10sp"
                        android:text="@string/submit_text"
                        android:textColor="@color/custom_black"
                        android:textSize="@dimen/small_medium_text_size" />

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>